@@ -234,6 +234,10 @@ Core and builtins
 Library
 -------
 
+- Bug #1701409: Fix a segfault in printing ctypes.c_char_p and
+  ctypes.c_wchar_p when they point to an invalid location.  As a
+  sideeffect the representation of these instances has changed.
+
 - tarfile.py: Added "exclude" keyword argument to TarFile.add().
 
 - Bug #1734723: Fix repr.Repr() so it doesn't ignore the maxtuple attribute.
